Added sound effects to awake the players using built-in Android sounds, added more elements to intent to pass to the night phase

--- a/MAFIA43/app/src/main/AndroidManifest.xml
+++ b/MAFIA43/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         </activity>
         <activity android:name=".Temp">
         </activity>
+        <activity android:name=".NightActivity">
+            
+        </activity>
         <activity android:name=".Voting">
 
         </activity>
