Added night selection activity to handle specific role actions

--- a/MAFIA43/app/src/main/AndroidManifest.xml
+++ b/MAFIA43/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".Temp">
         </activity>
         <activity android:name=".NightActivity">
-            
+        </activity>
+        <activity android:name=".NightSelectionActivity">
         </activity>
         <activity android:name=".Voting">
 
