Added last two activities for the night phase

--- a/MAFIA43/app/src/main/AndroidManifest.xml
+++ b/MAFIA43/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
         <activity android:name=".NightSelectionActivity">
         </activity>
 
+        <activity android:name=".DetectiveActivity">
+        </activity>
+
+        <activity android:name=".NightRecapActivity">
+        </activity>
+
         <activity android:name=".Voting">
         </activity>
 
