Forgot an activity for if the player is saved or not

--- a/MAFIA43/app/src/main/AndroidManifest.xml
+++ b/MAFIA43/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity android:name=".NightRecapActivity">
         </activity>
 
+        <activity android:name=".NightSaveActivity">
+        </activity>
+
         <activity android:name=".Voting">
         </activity>
 
