Added end condition activity and layouts

--- a/MAFIA43/app/src/main/AndroidManifest.xml
+++ b/MAFIA43/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
 
         <activity android:name=".VoteRecapActivity">
         </activity>
+
+        <activity android:name=".EndActivity">
+        </activity>
     </application>
 
 </manifest>
